# closure-challenge

./: .gitignore  README.md  pyproject.toml
src/closure_challenge/: __init__.py  dataset_utils.py  eval.py
src/closure_challenge/data/: ground_truth_test.npz
tests/: test_csv.py  test_dataset.py  test_eval.py  test_readme_example.py
tests/example_submission/: AR_14_Ret_180.csv  AR_14_Ret_180_spaces.csv  AR_14_Ret_180_tabs.csv  AR_1_Ret_360.csv  AR_1_Ret_360_spaces.csv  AR_1_Ret_360_tabs.csv  AR_3_Ret_360.csv  AR_3_Ret_360_spaces.csv  AR_3_Ret_360_tabs.csv  CBFS13700.csv  CBFS13700_spaces.csv  CBFS13700_tabs.csv  NASA_2DWMH.csv  NASA_2DWMH_points.csv  NASA_2DWMH_spaces.csv  NASA_2DWMH_tabs.csv  PHLL10595.csv  PHLL10595_spaces.csv  PHLL10595_tabs.csv  alpha_05_4071_2024.csv  alpha_05_4071_2024_spaces.csv  alpha_05_4071_2024_tabs.csv  alpha_05_4071_4048.csv  alpha_05_4071_4048_spaces.csv  alpha_05_4071_4048_tabs.csv  alpha_15_13929_2024.csv  alpha_15_13929_2024_spaces.csv  alpha_15_13929_2024_tabs.csv  alpha_15_13929_4048.csv  alpha_15_13929_4048_spaces.csv  alpha_15_13929_4048_tabs.csv
