[project]
name = "closure-challenge"
version = "0.1.0"
description = "Evaluation metrics for The Closure Challenge RANS benchmark"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Ryley McConkey", email = "rmcconke@mit.edu"}
]
license = {text = "MIT"}
keywords = ["fluids", "benchmark", "computational-fluid-dynamics", "cfd", "turbulence", "reynolds-averaged-navier-stokes", "turbulence-modelling"]

dependencies = [
    "numpy>=1.20.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://github.com/rmcconke/ml-turbulence-benchmark"
Repository = "https://github.com/rmcconke/closure-challenge"
Documentation = "https://github.com/rmcconke/closure-challenge#readme"
Issues = "https://github.com/rmcconke/closure-challenge/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/closure_challenge"]

[tool.hatch.build.targets.wheel.force-include]
"src/closure_challenge/data" = "closure_challenge/data"

[tool.hatch.version]
path = "src/closure_challenge/__init__.py"

[dependency-groups]
dev = [
    "scipy>=1.10.1",
]
